Complete bidding functionality